--- a/index.html
+++ b/index.html
@@ -10,78 +10,14 @@
 		<script src="js/index.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/echarts@5.5.1/dist/echarts.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2014-11-29/FileSaver.min.js"></script>
-		<!-- 		<link rel="stylesheet" href="css/index.css"> -->
+		<link rel="stylesheet" href="css/index.css">
 		<title>Demo</title>
-		<style>
-			* {
-				margin: 0;
-				padding: 0;
-			}
-
-			html,
-			body {
-				height: 100%;
-			}
-
-			body {
-				background-color: #fff;
-				font-family: sans-serif;
-				overflow: hidden;
-			}
-
-			h1 {
-				font-weight: normal;
-				font-size: 140%;
-				margin: 10px;
-			}
-
-			.main_box {
-				display: flex;
-				flex-direction: row;
-				height: 100%;
-				width: 100%;
-			}
-
-			.main_box #blocklyDiv {
-				height: 100%;
-				width: 50%;
-			}
-
-			.main_box #main {
-				height: 50%;
-				width: 50%;
-			}
-
-			.button_user {
-				height: 30px;
-				width: 100px;
-				background-color: lawngreen;
-				border: none;
-				border-radius: 2px 2px;
-			}
-			
-			#save {
-				margin: 2px;
-			}
-			
-			#save > #fileInput {
-				display: none;
-			}
-			
-			#save > label {
-				font-size: 13px;
-				display: inline-block;
-				line-height: 29px;
-				text-align: center;
-			}
-			
-		</style>
 	</head>
 	<body onload="initialize()">
 		<div id="save">
 			<input type="button" class="button_user" name="saveToFile" onclick="saveToFile()" value="save" id="saving">
 			<input type="file" id="fileInput">
-			<label for="fileInput" class="button_user">update</label>
+			<label for="fileInput" class="button_user">upload</label>
 			<input type="button" class="button_user" name="loadFromFile" onclick="loadFromFile()" value="load"
 				id="loading">
 			<input type="button" class="button_user" name="showChart" onclick="showChart()" value="show chart"
@@ -400,7 +336,6 @@
 			<category name="Variables" categorystyle="variable_category" custom="VARIABLE"></category>
 			<category name="Functions" categorystyle="procedure_category" custom="PROCEDURE"></category>
 		</xml>
-		</script>
 
 	</body>
 </html>
